client/src/App.css
/* .ri-h2 {
  font-family: 'Robertson Alternate';
  src: url('./components/resources/Robertson-Alternate.ttf') format('truetype');
  font-weight: normal;
  color: red;
  font-size: 60px;
  margin-left: 20px;
  padding-left: 20px;
} */

.ri-h1 {
  font-family: 'Roboto', 'sans-serif';
  font-weight: 500;
  background-color: white;
  font-size: 28px;
  color: #056676;
}

.ri-body {
  margin: 30 auto;
  background-color: white;
  font-family: 'Ubuntu', sans-serif;
  font-size: 16px;
  color: #056676;
}

.ri-button {
  background-color: white;
  font-family: 'Ubuntu', sans-serif;
  border-color: #056676;
  color: #056676;
  border: 1px solid-#e8ded2;
  border-radius: 4px;
  padding: 15px 32px;
  text-align: center;
}

.ri-button:hover {
  color: #e8ded2;
  border: 2px solid #056676;
  background: #056676;
  box-shadow: 0 1px 0 #5eaaa8;
  transition-timing-function: ease-in;
  transition: .3s;
}

img {
  display: flex;
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  z-index: -2;
}

